--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -8,26 +8,27 @@ include ../../blocks/info/info
 include ../../layout/comment/comment
 include ../../blocks/button/button
 include ../../blocks/rate/rate
-include ../../layout/dropdown/mix
+include ../../layout/dropdown/dropdown
+include ../../layout/wrapper/wrapper
 block variables
   - let pageClass = 'form-elements';
 
 block content
   .form-elements-text-fields-wrapper
-    .form-wrapper20
-      .form-flex-row
+    +wrapper({marginBottom: '20'})
+      +wrapper({flexDirection: 'row'})
         label.form-label(for='one') text field
         span.state-description default
       +input-field({placeholder: 'Email', id: 'one'})
 
-    .form-wrapper20
-      .form-flex-row
+    +wrapper({marginBottom: '20'})
+      +wrapper({flexDirection: 'row'})
         label.form-label(for='two') text field
         span.state-description hover / focus
       +input-field({placeholder: 'This is pretty awesome', id: 'two'})
 
-    .form-wrapper20
-      .form-flex-row
+    +wrapper({marginBottom: '20'})
+      +wrapper({flexDirection: 'row'})
         label.form-label(for='two') dropdown
         span.state-description default
       +dropdown({
@@ -35,13 +36,13 @@ block content
         dropdownList: [{}]
         })
 
-    .form-wrapper35
-      .form-flex-row
+    +wrapper({marginBottom: '35'})
+      +wrapper({flexDirection: 'row'})
         label.form-label(for='fourth') masked text field
         span.state-description default
       +input-field({placeholder: 'дд.мм.гггг', mods: 'date', id: 'fourth'})
 
-    .form-wrapper20
+    +wrapper({marginBottom: '20'})
       div.dinamic-calendar
         div.search-form-input-wrapper
           label(class="form-label" for="#calendar1") date Dropdown
@@ -60,7 +61,7 @@ block content
             id: "calendar2"
           })
 
-    .form-wrapper40
+    +wrapper({marginBottom: '40'})
       .short-dropdown-wrapper
         label.form-label(for='eight') filter date dropdown
         +input-field({placeholder: '18 авг - 23 авг', mods: 'date', id: 'eight'})
@@ -70,9 +71,9 @@ block content
         label.form-label(for='fifth') subscription text-field
         +input-field({placeholder: 'Email', id: 'fifth'})
 
-    .form-wrapper20
+    +wrapper({marginBottom: '20'})
       .short-width-wrapper
-        .form-flex-row
+        +wrapper({flexDirection: 'row'})
           label.form-label(for='six') dropdown
           span.state-description default
         +dropdown({
@@ -82,7 +83,7 @@ block content
 
     .form-wrapper100
       .short-width-wrapper
-        .form-flex-row
+        +wrapper({flexDirection: 'row'})
           label.form-label(for='three') dropdown
           span.state-description expanded
         +dropdown({
@@ -134,7 +135,7 @@ block content
         +checkbox('Можно с питтомцами')
         +checkbox('Можно пригласить гостей (до 10 человек)')
 
-    .form-wrapper35
+    +wrapper({marginBottom: '35'})
       .form-grid-column-10
         .form-wrapper5
           span.input-groop-title radio buttons
@@ -152,14 +153,14 @@ block content
             }
           ]
         })
-    .form-wrapper35
+    +wrapper({marginBottom: '35'})
       .form-grid-column-10
         .form-wrapper5
           span.input-groop-title toggle
         +toggle('Получать спецпредложения')
         +toggle('Получать спецпредложения')
 
-    .form-wrapper40
+    +wrapper({marginBottom: '40'})
       .form-grid-column-10
         .form-wrapper5
           span.input-groop-title like button
@@ -208,9 +209,9 @@ block content
 
 
   .form-elements-button-container
-    .form-wrapper40
+    +wrapper({marginBottom: '40'})
       .short-width-wrapper
-        .form-flex-row
+        +wrapper({flexDirection: 'row'})
           label.form-label(for='nine') Range Slider
           .extra-controls
             input.js-input-from(type='text' value='0')
@@ -219,7 +220,7 @@ block content
         include ../../blocks/range-slider/range-slider
 
     .form-wrapper30
-      .form-wrapper20
+      +wrapper({marginBottom: '20'})
         span.input-groop-title buttons
       .grid-tabel
         +btn('click me', 'theme-main')(href="/mocke me")
@@ -230,7 +231,7 @@ block content
           +btn('click me', 'theme-secondary')(href="/mocke me")
         +btn('click me', 'theme-text')(href="/mocke me")
         +btn('click me', 'theme-text')(href="/mocke me")
-    .form-wrapper40
+    +wrapper({marginBottom: '40'})
       +btn('перейти к оплате', 'theme-main', true)
 
     .form-wrapper200
@@ -240,7 +241,7 @@ block content
         include ../../blocks/pagination/pagination
 
     .form-wrapper20
-      .form-flex-row
+      +wrapper({flexDirection: 'row'})
       label.form-label(for='three') dropdown
       +dropdown({
         mods: 'absolute, active',
