--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -12,11 +12,9 @@ block content
       li.index-nav-item
         a.index-nav-link(href="room-details.html") Room details
       li.index-nav-item
-        a.index-nav-link(href="galery.html") Gallery
+        a.index-nav-link(href="search-room.html") Search-room
       li.index-nav-item
         a.index-nav-link(href="signin.html") Singn in
-      li.index-nav-item
-        a.index-nav-link(href="ui.html") Ui Kit
       li.index-nav-item
         a.index-nav-link(href="form-elements.html") Form Elements
       li.index-nav-item
