--- a/src/theme/vars.scss
+++ b/src/theme/vars.scss
@@ -3,6 +3,7 @@ $default-color: #1f2041;
 $opasity005: 0.05;
 
 html {
+  --gues: 5px;
   --first-font: Montserrat-Regular;
   --second-font: Montserrat-Bold;
   --third-font: Quicksand-Bold;
