--- a/src/blocks/info/info.pug
+++ b/src/blocks/info/info.pug
@@ -6,10 +6,10 @@ mixin info(info)
   .info_left-num= info.righthead
     span.bold= info.price
     span.info_number= info.tophead
-  //.info_bottom
-  // .rating(class= info.starName)
-  // a.info-number.to-room-rating(href= info.linkToRoom) #{info.bottomhead}
-   //span.info_bottom-text= info.bottomtext
+  .info_bottom
+   .rating(class= info.starName)
+   a.info-number.to-room-rating(href= info.linkToRoom) #{info.bottomhead}
+   span.info_bottom-text= info.bottomtext
 
 mixin icon-info(info)
  .icon-info
