--- a/src/layout/cards/cards.pug
+++ b/src/layout/cards/cards.pug
@@ -1,6 +1,7 @@
 include ../../blocks/info/info
-
-mixin card({price,linkToRoom, starName, image1, image2, image3, image4, righthead, righttext, tophead, toptext,bottomhead, bottomtext, id})
+include ../../blocks/rate/rate
+include ../wrapper/wrapper
+mixin card({rate,price,linkToRoom, image1, image2, image3, image4, righthead, righttext, tophead, toptext,bottomhead, bottomtext, id})
   article.card
     div.card-img-wrapper
      div.slick
@@ -14,6 +15,6 @@ mixin card({price,linkToRoom, starName, image1, image2, image3, image4, righthea
     +info({righthead:righthead, righttext:righttext, tophead:tophead,price:price,
       toptext: toptext, bottomhead:bottomhead, bottomtext: bottomtext,
       linkToRoom:linkToRoom, starName:starName})
-    //include ../../blocks/rate/rate
+    +rate(rate)
 
 
