--- a/src/theme/vars.scss
+++ b/src/theme/vars.scss
@@ -1,14 +1,10 @@
 @import "fonts";
-$default-color: #1f2041;
-$opasity005: 0.05;
-
 html {
-  --gues: 5px;
-  --first-font: Montserrat-Regular;
-  --second-font: Montserrat-Bold;
-  --third-font: Quicksand-Bold;
-  --fifth-font: Material-Icon;
-  --six-font: Font Awsome;
+  --Montserrat-Regular: Montserrat-Regular, Arial, sans-serif;
+  --Montserrat-Bold: Montserrat-Bold, Arial, sans-serif;
+  --Quicksand-Bold: Quicksand-Bold, OpenSans-Bold, sans-serif;
+  --Material-Icons: Material Icons;
+  --Font-Awesome: Font Awesome 5 Brands;
   --default-color: 31, 32, 65;
   --purple: #bc9cff;
   --blue: #8ba4f9;
