--- a/src/blocks/button/button.pug
+++ b/src/blocks/button/button.pug
@@ -1,4 +1,4 @@
-mixin btn(text, mods, isInput, required)
+mixin btn(text, mods, isInput)
 
   //- Принимает:
   //-   text    {string} - текст кнопки
