--- a/src/blocks/checkbox/checkbox.pug
+++ b/src/blocks/checkbox/checkbox.pug
@@ -9,3 +9,63 @@ mixin checkbox(label, name, checked=false)
 
 
 
+mixin checkbox-test(checkboxes, title)
+
+ //- Принимает:
+ //-   checkboxes {array}
+ //-     {object}
+ //-       title: ''         {string} - текст рядом с чекбоксом
+ //-       helpText: ''      {string} - пояснение под полем
+ //-       mods: ''          {string} - модификаторы обертки чекбокса
+ //-       attrs:            {object} - любые атрибуты для input
+ //-         name:           {string}
+ //-     ...
+ //- Вызов:
+       +field-checkbox([
+         {
+           title: 'Чекбокс0',
+           helpText: 'Подсказка',
+           attrs: {
+             name: 'check0',
+           }
+         },
+       ])
+       +field-checkbox([
+         {
+           title: 'Чекбокс1',
+           helpText: 'Подсказка',
+           mods: 'error',
+           attrs: {
+             name: 'check1',
+             checked: true,
+           }
+         },
+         {
+           title: 'Чекбокс2',
+           helpText: 'Подсказка',
+           mods: 'error',
+           attrs: {
+             name: 'check2',
+           }
+         },
+       ], 'ОбщееНазваниеБлока')
+ .checkbox&attributes(attributes)
+  if(typeof(title) !== 'undefined' && title)
+   .checkbox__title!= title
+  each checkbox in checkboxes
+   -
+    var allMods = '';
+    if(typeof(checkbox.mods) !== 'undefined' && checkbox.mods) {
+     var modsList = checkbox.mods.split(',');
+     for (var i = 0; i < modsList.length; i++) {
+      allMods = allMods + ' checkbox__' + modsList[i].trim();
+     }
+    }
+   .checkbox-wrapper(class=allMods)
+    label.checkbox
+     input.checkbox__input(type='checkbox')&attributes(checkbox.attrs)
+     .checkbox__box
+     span.checkbox__input-lable!= checkbox.title
+    if(typeof(checkbox.helpText) !== 'undefined' && checkbox.helpText)
+     .checkbox__help-text-wrap
+      .checkbox__help-text!= checkbox.helpText
