--- a/src/blocks/like-button/like-button.scss
+++ b/src/blocks/like-button/like-button.scss
@@ -41,7 +41,7 @@
   color: #bc9cff;
 }
 .like__number {
-  font-family: Montserrat-Regular;
+  font-family: var(--Montserrat-Regular);
   font-style: normal;
   font-weight: normal;
   font-size: 10px;
