--- a/src/layout/checkbox-list/checkbox-list.pug
+++ b/src/layout/checkbox-list/checkbox-list.pug
@@ -2,22 +2,25 @@ include ../../blocks/checkbox/checkbox
 
 form(method='post' name='singhup' id='singhup')
  fieldset.checkbox-dropdown
+
   input.dropdown-selector(type="checkbox")
   legend.dropdown-caption expandable checkbox list
   .checkbox-dropdown-content
-   li
-    +checkbox('Завтрак')
-   li
-    +checkbox('Письменный стол')
-   li
-    +checkbox('Стул для кормления')
-   li
-    +checkbox('Кроватка')
-   li
-    +checkbox('Телевизор')
-   li
-    +checkbox('Шампунь')
-   li
-    +checkbox('Телевизор')
-   li
-    +checkbox('Шампунь')
+
+                                  //li
+                                  // +checkbox('Завтрак')
+                                  //li
+                                  // +checkbox('Письменный стол')
+                                  //li
+                                  // +checkbox('Стул для кормления')
+                                  //li
+                                  // +checkbox('Кроватка')
+                                  //li
+                                  // +checkbox('Телевизор')
+                                  //li
+                                  // +checkbox('Шампунь')
+                                  //li
+                                  // +checkbox('Телевизор')
+                                  //li
+                                  // +checkbox('Шампунь')
+
