--- a/src/layout/main/main.pug
+++ b/src/layout/main/main.pug
@@ -9,7 +9,7 @@ html(lang='ru')
     block head
 
   body(class=pageClass)
-    h1.site-name Отель TOXIN
+    h1.visiually-hidden Отель TOXIN
     include ../headers/pages-header/pages-header
     block content
 
