--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -37,3 +37,16 @@
   top: 1350px;
   bottom: 50px;
 }
+.form-elements-comment-container {
+  position: absolute;
+  top: 1500px;
+  left: 30px;
+}
+.awesom-icons {
+  font-family: "Font Awesome 5 Brands";
+}
+.ch {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 50px;
+}
