--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -22,5 +22,5 @@
 .index-nav-link {
   color: var(--color1);
   font-size: var(--text-lg);
-  font-family: var(--second-font);
+  font-family: var(--Montserrat-Bold);
 }
