--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -1,14 +1,13 @@
 @import "src/theme/mixins";
 .button {
-  display: block;
+  display: inline-block;
   width: 100%;
   border-radius: 22px;
   text-transform: uppercase;
   font-size: var(--text-xs);
-  font-family: var(--second-font);
+  font-family: var(--Montserrat-Bold);
   outline: none;
   text-align: center;
-  vertical-align: middle;
   padding: 1em;
   border-color: transparent;
 
@@ -27,17 +26,21 @@
     color: var(--white);
   }
 
-  &_theme-main:hover,
-  &_theme-main:focus {
+  &_theme-main:hover {
     background: linear-gradient(
       180deg,
       rgba(74%, 61%, 100%, 0.5) 0%,
       rgba(55%, 64%, 98%, 0.5) 100%
     );
   }
+  &_theme-main:focus {
+    box-shadow: 2px 3px 2px 1px rgba(var(--default-color), var(--opasity-025));
+  }
   &_theme-secondary {
-    background-color: var(--white);
     color: var(--purple);
+  }
+  &_theme-secondary:focus {
+    box-shadow: 3px 4px 3px 1px rgba(var(--default-color), var(--opasity-025));
   }
 
   &_link {
@@ -46,8 +49,7 @@
 }
 
 .rounded-corners-gradient-borders {
-  display: block;
-  width: 100%;
+  display: flex;
   border: double 2px transparent;
   border-radius: 22px;
   background-image: linear-gradient(white, white),
@@ -55,8 +57,7 @@
   background-origin: border-box;
   background-clip: content-box, border-box;
 }
-.rounded-corners-gradient-borders:hover,
-.rounded-corners-gradient-borders:focus {
+.rounded-corners-gradient-borders:hover {
   background-image: linear-gradient(white, white),
     radial-gradient(
       circle at top left,
