--- a/src/blocks/calendar/calendar.scss
+++ b/src/blocks/calendar/calendar.scss
@@ -1,32 +1,3 @@
-//.calendar-wrapper {
-//  margin: 50px 100px;
-//}
-//.mytest {
-//  display: flex;
-//}
-//.mytest {
-//  justify-content: space-between;
-//  width: 320px;
-//  height: 44px;
-//  background: #fff;
-//}
-
-//.date-picker {
-//  width: 170px;
-//  height: 25px;
-//  padding: 0;
-//  border: 0;
-//  line-height: 25px;
-//  padding-left: 10px;
-//  font-size: 12px;
-//  font-family: Arial, sans-serif;
-//  font-weight: bold;
-//  cursor: pointer;
-//  color: #303030;
-//  position: relative;
-//  z-index: 2;
-//}
-//
 .date-picker-wrapper {
   position: absolute;
   top: 0;
@@ -50,34 +21,8 @@
 }
 
 .date-picker-wrapper {
-  //&.inline-wrapper {
-  //  position: relative;
-  //  box-shadow: none;
-  //  display: inline-block;
-  //}
-  //&.single-date {
-  //  width: auto;
-  //}
-  //&.no-shortcuts {
-  //  padding-bottom: 12px;
-  //}
-  //&.no-topbar {
-  //  padding-top: 12px;
-  //}
-  //.footer {
-  //  font-size: 11px;
-  //  padding-top: 3px;
-  //}
-  //b {
-  //  color: #666;
-  //  font-weight: 700;
-  //}
-  //a {
-  //  color: rgb(107, 180, 214);
-  //  text-decoration: underline;
-  //}
   .month-name {
-    font-family: Quicksand-Bold, OpenSans-Bold;
+    font-family: var(--Quicksand-Bold);
     font-size: 19px;
     line-height: 24px;
     text-align: center;
@@ -164,7 +109,7 @@
         height: 39.5px;
       }
       .day {
-        font-family: Montserrat-Regular;
+        font-family: var(--Montserrat-Regular);
         font-style: normal;
         font-weight: 400;
         font-size: 12px;
@@ -182,7 +127,7 @@
           //color: #999;
           cursor: default;
           display: block;
-          font-family: Montserrat-Regular;
+          font-family: var(--Montserrat-Regular);
           font-size: 12px;
           line-height: 15px;
           text-align: center;
@@ -197,7 +142,7 @@
         );
       }
       .week-name {
-        font-family: Montserrat-Bold;
+        font-family: var(--Montserrat-Bold);
         font-style: normal;
         font-size: 12px;
         line-height: 15px;
@@ -228,7 +173,7 @@
     background-color: white;
     &.toMonth {
       &.valid {
-        font-family: Montserrat-Regular;
+        font-family: var(--Montserrat-Regular);
         font-style: normal;
         font-weight: 400;
         font-size: 12px;
