--- a/src/blocks/checkbox/checkbox.scss
+++ b/src/blocks/checkbox/checkbox.scss
@@ -1,125 +1,102 @@
-@supports (-webkit-appearance: none) or (-moz-appearance: none) {
-  .checkbox-button {
-    //--active: red;
-    --active-inner: #bc9cff;
-    --focus: 2px rgba(39, 94, 254, 0.3);
-    --border: #bbc1e1;
-    --border-hover: #275efe;
-    --background: #fff;
-    --disabled: #f6f8ff;
-    --disabled-inner: #e1e6f9;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    height: 21px;
-    outline: none;
-    display: inline-block;
-    vertical-align: top;
-    position: relative;
-    margin: 0;
-    cursor: pointer;
-    border: 1px solid var(--bc, var(--border));
-    background: var(--b, var(--background));
-    transition: background 0.3s, border-color 0.3s, box-shadow 0.2s;
-    &:after {
-      content: "";
-      display: block;
-      left: 0;
-      top: 0;
-      position: absolute;
-      transition: transform var(--d-t, 0.3s) var(--d-t-e, ease),
-        opacity var(--d-o, 0.2s);
-    }
-    &:checked {
-      --b: var(--active);
-      --bc: var(--active);
-      --d-o: 0.3s;
-      --d-t: 0.6s;
-      --d-t-e: cubic-bezier(0.2, 0.85, 0.32, 1.2);
-    }
-    &:disabled {
-      --b: var(--disabled);
-      cursor: not-allowed;
-      opacity: 0.9;
-      &:checked {
-        --b: var(--disabled-inner);
-        --bc: var(--border);
-      }
-      & + label {
-        cursor: not-allowed;
-      }
-    }
-    &:hover {
-      &:not(:checked) {
-        &:not(:disabled) {
-          --bc: var(--border-hover);
-        }
-      }
-    }
-    &:focus {
-      box-shadow: 0 0 0 var(--focus);
-    }
-    &:not(.switch) {
-      width: 21px;
-      &:after {
-        opacity: var(--o, 0);
-      }
-      &:checked {
-        --o: 1;
-      }
-    }
-    & + .checkbox-button_lable {
-      font-size: 14px;
-      line-height: 21px;
-      display: inline-block;
-      vertical-align: top;
-      cursor: pointer;
-      margin-left: 4px;
-    }
+.checkbox-wrapper {
+  display: block;
+  margin-bottom: 10.56px;
+}
+.checkbox {
+  //display: inline-flex;
+  //flex-direction: row;
+  //align-items: center;
+  padding-left: 1.2em;
+
+  &__input {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
   }
-  .checkbox-button {
-    &:not(.switch) {
-      border-radius: 4px;
-      &:after {
-        width: 5px;
-        height: 9px;
-        border: 2px solid var(--active-inner);
-        border-top: 0;
-        border-left: 0;
-        left: 7px;
-        top: 4px;
-        transform: rotate(var(--r, 20deg));
-      }
-      &:checked {
-        --r: 43deg;
-      }
-    }
-    &.switch {
-      width: 38px;
-      border-radius: 11px;
-      &:after {
-        left: 2px;
-        top: 2px;
-        border-radius: 50%;
-        width: 15px;
-        height: 15px;
-        background: var(--ab, var(--border));
-        transform: translateX(var(--x, 0));
-      }
-      &:checked {
-        --ab: var(--active-inner);
-        --x: 17px;
-      }
-      &:disabled {
-        &:not(:checked) {
-          &:after {
-            opacity: 0.6;
-          }
-        }
-      }
-    }
+  &__box {
+    position: absolute;
+    margin-top: 0.4em;
+    margin-left: -2em;
+    border-radius: 4px;
+    width: 1.2em;
+    height: 1.2em;
+    overflow: hidden;
+    border: 1px solid rgba(var(--default-color), var(--opasity-025));
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+  }
+
+  &__input:checked + &__box {
+    background-image: url("assets/img/Vector.svg");
+    background-repeat: no-repeat;
+  }
+  &__input:focus + &__box {
+  }
+  &__input:focus:checked + &__box {
+    background-image: url("assets/img/Vector.svg");
+    background-repeat: no-repeat;
+  }
+  &__input:disabled + &__box {
+    border-color: 1px solid var(--default-color);
+  }
+  &__input:disabled:checked + &__box {
+    background-image: url("assets/img/Vector.svg");
+    background-repeat: no-repeat;
+  }
+
+  &__input-lable {
+    font-size: 14px;
+    color: rgba(var(--default-color), var(--opasity-05));
   }
 }
-.checkbox-w {
-  display: flex;
-  flex-wrap: no wrap;
-}
+
+//.checkbox {
+//  display: inline-flex;
+//  align-items: center;
+//  border-color: #aaaaaa;
+//  cursor: pointer;
+//
+//  &__input {
+//    display: none;
+//  }
+//  &__box {
+//    display: flex;
+//    align-items: center;
+//    justify-content: center;
+//    width: 20px;
+//    height: 20px;
+//    border: 1px solid rgba(var(--default-color), var(--opasity-025));
+//    border-radius: 4px;
+//    margin-right: 9.74px;
+//    flex-shrink: 0;
+//    transition: background 0.15s;
+//  }
+//  &__box::after {
+//    color: white;
+//    content: "\e5ca";
+//    font-family: var(--Material-Icons);
+//    font-weight: bold;
+//    font-size: 1em !important;
+//    text-transform: none;
+//    transform: (0);
+//    transition: 0.15s;
+//  }
+//  //+ выбирает дочерний элемент
+//  &__input:checked + &__box {
+//    background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+//    -webkit-background-clip: text;
+//    -webkit-text-fill-color: transparent;
+//  }
+//  &__input:checked + &__box::after {
+//    background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+//    -webkit-background-clip: text;
+//    -webkit-text-fill-color: transparent;
+//  }
+//  &__input-lable {
+//    font-size: 14px;
+//    color: rgba(var(--default-color), var(--opasity-05));
+//    transform: scale(1);
+//  }
+//}
