--- a/src/blocks/info/info.scss
+++ b/src/blocks/info/info.scss
@@ -38,7 +38,7 @@
   cursor: pointer;
 }
 .info_left-text {
-  font-family: var(--second-font);
+  font-family: var(--Montserrat-Bold);
   font-style: normal;
   font-weight: bold;
   font-size: 12px;
@@ -61,14 +61,14 @@
   color: rgba(31, 32, 65, 0.5);
 }
 .info_text {
-  font-family: var(--first-font);
+  font-family: var(Montserrat-Regular);
   font-style: normal;
   font-weight: bold;
   font-size: 12px;
   color: rgba(31, 32, 65, 0.5);
 }
 .info_bottom-text {
-  font-family: var(--first-font);
+  font-family: var(Montserrat-Regular);
   font-size: 14px;
   color: rgba(31, 32, 65, 0.5);
 }
