--- a/src/blocks/menu/menu.scss
+++ b/src/blocks/menu/menu.scss
@@ -13,5 +13,5 @@
   color: var(--color1);
   text-transform: uppercase;
   font-size: var(--text-xl);
-  font-family: var(--first-font);
+  font-family: var(--Montserrat-Regular);
 }
