--- a/src/layout/ booking-form/booking-form.scss
+++ b/src/layout/ booking-form/booking-form.scss
@@ -25,7 +25,7 @@
   //color: red;
 }
 .booking-form-table-last {
-  font-family: OpenSans-Bold;
+  font-family: --Quicksand-Bold;
   font-size: 19px;
   line-height: 24px;
   color: #1f2041;
