--- a/src/layout/cards/cards.pug
+++ b/src/layout/cards/cards.pug
@@ -1,20 +1,23 @@
 include ../../blocks/info/info
 include ../../blocks/rate/rate
 include ../wrapper/wrapper
-mixin card({rate,price,linkToRoom, image1, image2, image3, image4, righthead, righttext, tophead, toptext,bottomhead, bottomtext, id})
+mixin card({rate, linkToRoom, image1, image2, image3, image4, review, room, lux, price})
+  -
   article.card
-    div.card-img-wrapper
-     div.slick
-      img(src=(`assets/img/${image1}`), alt="apartment photo")
-      img(src=(`assets/img/${image2}`), alt="apartment photo")
-      img(src=(`assets/img/${image3}`), alt="apartment photo")
-      img(src=(`assets/img/${image4}`), alt="apartment photo")
-     //i.material-icons.material-icons-left chevron_left
-     //i.material-icons.material-icons-right chevron_right
+    .card-img-wrapper
+      .slick
+        img(src=(`assets/img/${image1}`), alt="apartment photo")
+        img(src=(`assets/img/${image2}`), alt="apartment photo")
+        img(src=(`assets/img/${image3}`), alt="apartment photo")
+        img(src=(`assets/img/${image4}`), alt="apartment photo")
 
-    +info({righthead:righthead, righttext:righttext, tophead:tophead,price:price,
-      toptext: toptext, bottomhead:bottomhead, bottomtext: bottomtext,
-      linkToRoom:linkToRoom, starName:starName})
-    +rate(rate)
+    .card-description
+      .card-desription-item.card-desription-item-col1 #[span.card-title= room] #[span.lux= lux ? 'люкс' : '']
+      .card-desription-item.card-desription-item-col2 #[span.accented= price] #[span.small в сутки]
+      .line
+      .line
+      .card-desription-item.card-desription-item-col3
+        +rate(rate)
+      .card-desription-item.card-desription-item-col4 #[span.accented= review] #[span.normal Отзывов]
 
 
