--- a/src/layout/main/main.scss
+++ b/src/layout/main/main.scss
@@ -4,28 +4,27 @@ html {
   box-sizing: border-box;
 }
 *,
-*:before,
-*:after {
+*::before,
+*::after {
   box-sizing: inherit;
   font-size: var(--text-base-size);
 }
+
 html {
   overflow-x: hidden;
 }
 body,
 html {
   width: 100%;
-  background-color: white;
+  background-color: var(--white);
   color: var(--default-color);
-  font-family: Montserrat-Regular;
+  font-family: var(--Montserrat-Regular);
 }
 
 a {
   text-decoration: none;
 }
-.site-name {
-  display: none;
-}
+
 ul,
 li {
   list-style-type: none;
@@ -52,3 +51,158 @@ img {
   height: 1px;
   margin: -1px;
 }
+h1 {
+  font-family: var(--Quicksand-Bold);
+  font-size: 24px;
+}
+
+.input-groop-title {
+  font-family: var(--Montserrat-Bold);
+  //line-height: 15px;
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+.form-label {
+  display: block;
+  font-family: var(--Montserrat-Bold);
+  font-size: 12px;
+  line-height: 15px;
+  text-transform: uppercase;
+  margin-bottom: 5px;
+  //color: #1f2041;
+}
+
+input[placeholder] {
+  font-size: 14px;
+  line-height: 18px;
+  padding: 0.9em;
+  opacity: var(--opasity-075);
+}
+
+fieldset {
+  border: rgba(0, 0, 0, 0);
+  height: 100%;
+  width: 100%;
+  border: none;
+  //margin: 0 auto;
+}
+
+.state-description {
+  font-size: 12px;
+  line-height: 15px;
+  text-transform: uppercase;
+  opacity: var(--opasity-05);
+}
+section {
+  font-family: var(--Montserrat-Regular);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  //color: rgba(31, 32, 65, 0.75);
+}
+.toggle_lable {
+  font-family: var(--Montserrat-Regular);
+  font-size: 14px;
+  line-height: 24px;
+  //color: rgba(31, 32, 65, 0.5);
+}
+label:focus {
+  border-color: #1f2041;
+}
+.form-button-wrapper {
+  display: grid;
+  grid-template-columns: 4fr 1.81fr;
+  align-items: center;
+  font-family: var(--Montserrat-Regular);
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
+
+  //color: #000000;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  width: 380px;
+  padding: 25px 30px 25px 30px;
+}
+.form-wrapper5 {
+  margin-bottom: 5px;
+}
+.form-wrapper10 {
+  margin-bottom: 10px;
+}
+.form-wrapper15 {
+  margin-bottom: 15px;
+}
+.form-wrapper20 {
+  margin-bottom: 20px;
+}
+.form-wrapper25 {
+  margin-bottom: 25px;
+}
+.form-wrapper30 {
+  margin-bottom: 30px;
+}
+.form-wrapper35 {
+  margin-bottom: 35px;
+}
+.form-wrapper40 {
+  margin-bottom: 40px;
+}
+.form-wrapper100 {
+  margin-bottom: 100px;
+}
+.form-wrapper150 {
+  margin-bottom: 165px;
+}
+.form-wrapper200 {
+  margin-bottom: 240px;
+}
+.form-flex-row {
+  display: flex;
+  justify-content: space-between;
+}
+.form-flex-column {
+  display: flex;
+  flex-direction: column;
+}
+.form-grid-column20 {
+  display: grid;
+  grid-row-gap: 20px;
+}
+.form-grid-column-10 {
+  display: grid;
+  grid-row-gap: 10px;
+  align-items: center;
+}
+.form-grid-row5 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 4.1fr;
+  grid-column-gap: 5px;
+}
+.form-grid-row {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.grid-tabel {
+  display: grid;
+  grid-template-columns: 99px 99px;
+  grid-column-gap: 20px;
+  justify-content: start;
+  grid-row-gap: 33px;
+}
+
+//.form-wrapper10 {
+//  width: 100%;
+//  margin-bottom: 20px;
+//}
