--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -23,3 +23,10 @@
   top: 550px;
   left: 450px;
 }
+.cards-page-room-card-w {
+  position: absolute;
+
+  //width: 270px;
+  left: 900px;
+  top: 400px;
+}
