--- a/src/theme/normalize.scss
+++ b/src/theme/normalize.scss
@@ -30,10 +30,10 @@ main {
  * Correct the font size and margin on `h1` elements within `section` and
  * `article` contexts in Chrome, Firefox, and Safari.
  */
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
+//h1 {
+//  font-size: 2em;
+//  margin: 0.67em 0;
+//}
 /* Grouping content
    ========================================================================== */
 /**
@@ -55,7 +55,7 @@ hr {
 pre {
   font-family: monospace, monospace;
   /* 1 */
-  font-size: 1em;
+  //font-size: 1em;
   /* 2 */
 }
 /* Text-level semantics
@@ -197,9 +197,9 @@ button:-moz-focusring,
 /**
  * Correct the padding in Firefox.
  */
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
+//fieldset {
+//  padding: 0.35em 0.75em 0.625em;
+//}
 /**
  * 1. Correct the text wrapping in Edge and IE.
  * 2. Correct the color inheritance from `fieldset` elements in IE.
