--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -7,10 +7,10 @@ block variables
  - let containerName = 'room-details-container'
 block content
    div.room-image-wrapper
-    img(src='assets/img/image 1.jpg')
+    img(src='//assets/img/image 1.jpg')
     div.second-column
-     img.second(src='assets/img/image 2.jpg')
-     img(src='assets/img/image 3.jpg')
+     img.second(src='//assets/img/image 2.jpg')
+     img(src='//assets/img/image 3.jpg')
    section.comment-section-wrapper
     div.cons
      h3 Сведения о номере
