--- a/src/blocks/info/info.pug
+++ b/src/blocks/info/info.pug
@@ -22,7 +22,7 @@ mixin icon-info(info)
 mixin comment-info(info)
  .icon-info
   .icon-info-left
-   img.commet-info-img(src=(`assets/img/${info.image}`), width="48px" height="48px" alt="apartment photo")
+   img.commet-info-img(src=(`//assets/img/${info.image}`), width="48px" height="48px" alt="apartment photo")
   .icon-info_right
    .info_number= info.tophead
    .info_bottom-text= info.bottomtext
